--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 2,
-  "name": "Nasa Apod New Tab",
+  "name": "Nasa APOD New Tab",
   "description": "Changes new Tab",
   "version": "1.0.1",
   "icons": {
